# bitcoin_payment_protocol

./: .gitignore  README.md
bitcoin_app/: CMakeLists.txt  README.md  transaction_browser
bitcoin_app/src/: CMakeLists.txt  client.cpp  client.h  defines.h  hd_wallet_testnet.cpp  hd_wallet_testnet.h  main.cpp  point_of_sale.cpp  point_of_sale.h  provider.cpp  provider.h  state.cpp  state.h  statedata.cpp  statedata.h  transaction.cpp  transaction.h  transactiondata.cpp  transactiondata.h
bitcoin_app/transaction_logs/: client_reclaim_deposit  double_spending  normal_transaction
daps/: CMakeLists.txt  README.md
daps/src/: CMakeLists.txt  const_and_error.h  daps.c  daps.h  data_structures.h
daps/test/: CMakeLists.txt
daps/test/basic_tests/: CMakeLists.txt  extraction_checks.cpp  key_gen_checks.cpp  signature_checks.cpp  speed_test.cpp
